Switch Windows CI from MSVC to llvm-mingw
- Update CI workflow to use llvm-mingw instead of MSVC for Windows builds
- Set CC, CXX, AR, RANLIB environment variables to force use of llvm-mingw toolchain
- Add .scons_cache/ and samples/elixir_sample/dist/ to .gitignore
- Update various generated files and dependencies